<resources>
    <string name="app_name">Clean Water Crowdsourcing</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="SubmitWaterReport">Submit Water Source Report</string>
    <string name="sourceReportSubmitError">Missing one or more fields.</string>
    <string name="SubmitWaterPurityReport">Submit Water Purity Report</string>
    <string name="purityReportSubmitError">Missing one or more fields.</string>
    <string name="nav_source">Source</string>
    <string name="location">Location</string>
    <string name="radius">Radius</string>
    <string name="year">Year</string>
    <string name="select_purity_type">Select Purity Type</string>
    <string name="virus_ppm">Virus PPM</string>
    <string name="contaminant_ppm">Contaminant PPM</string>
    <string name="create_graph">Create Graph</string>
    <string name="name">Name</string>
    <string name="water_condition">Water Condition</string>
    <string name="submit">Submit</string>
    <string name="water_type">Water Type</string>
    <string name="admin_fragment">Admin Fragment</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="purity">Purity</string>
    <string name="admin">Admin</string>
    <string name="trends">Trends</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <string name="home_address">Home Address: </string>
    <string name="email_address">Email Address: </string>
    <string name="user_profile">User Profile</string>

    <string name="sign_in_cancelled">Sign in cancelled.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="unknown_error">Login error.</string>
    <string name="unknown_sign_in_response">Login error.</string>
    <string name="update_successful">User profile updated.</string>

    <string name="facebook_application_id" translatable="false">1333732413341662</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb1333732413341662</string>
</resources>
