<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tech.milind.cleanwatercrowdsourcing.LoginAcitivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="68dp"
        android:id="@+id/editTextUsername"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/username" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/editTextUsername"
        android:layout_alignStart="@+id/editTextUsername"
        android:layout_marginTop="78dp"
        android:id="@+id/editTextPassword"
        android:hint="@string/password" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:id="@+id/buttonSignIn"
        android:onClick="onSignInPressed"
        android:layout_marginStart="45dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCancel"
        android:onClick="onCancelPressed"
        android:layout_marginEnd="41dp"
        android:layout_alignBottom="@+id/buttonSignIn"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
