<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:id="@+id/activity_edit_quality_report">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textInputLayoutPurityEdit">

            <EditText
                android:id="@+id/namePurityReportEditTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/textInputLayoutPurityEdit"
            android:layout_marginRight="60dp"
            android:layout_alignParentStart="true"
            android:id="@+id/textInputLayoutPurity2Edit">

            <EditText
                android:id="@+id/locationPurityReportEditTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/location"
                android:inputType="none" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addPurityLocationEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@mipmap/ic_add_white_24dp"
            android:layout_alignBottom="@+id/textInputLayoutPurity2Edit"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/textViewConditionPurityReportEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="26dp"
            android:text="@string/water_condition"
            android:layout_below="@+id/textInputLayoutPurity2Edit" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/spinnerPurityConditionEdit"
            android:layout_marginRight="17dp"
            android:layout_marginLeft="17dp"
            android:layout_below="@+id/textViewConditionPurityReportEdit" />

        <TextView
            android:id="@+id/textViewVirusPurityReportEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="26dp"
            android:text="@string/virus_ppm"
            android:layout_below="@+id/spinnerPurityConditionEdit" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/textViewVirusPurityReportEdit"
            android:layout_marginRight="60dp"
            android:layout_alignParentStart="true"
            android:id="@+id/textInputLayoutPurity3Edit">

            <EditText
                android:id="@+id/virusPurityReportEditTextEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="20dp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textViewContamPurityReportEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="26dp"
            android:text="@string/contaminant_ppm"
            android:layout_below="@+id/textInputLayoutPurity3Edit"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/textViewContamPurityReportEdit"
            android:layout_marginRight="60dp"
            android:layout_alignParentStart="true"
            android:id="@+id/textInputLayoutPurity4Edit">

            <EditText
                android:id="@+id/contamPurityReportEditTextEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="20dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submitPurityReportEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayoutPurity4Edit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/submit" />

    </RelativeLayout>
</ScrollView>